--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "quasar-framework": "^0.14.4",
     "vue": "^2.5.0",
     "vue-router": "^3.0.1",
-    "express":"^4.16.0"
+    "express": "^4.16.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
@@ -73,5 +73,7 @@
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.19.1",
     "webpack-merge": "^4.1.0"
-  }
+  },
+  "main": ".eslintrc.js",
+  "license": "ISC"
 }
