--- a/package.json
+++ b/package.json
@@ -15,25 +15,25 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "apollo-cache-inmemory": "^1.1.1",
-    "apollo-client": "^2.0.3",
-    "apollo-link-http": "^1.2.0",
     "auth0-js": "^8.11.3",
     "auth0-lock": "^10.24.1",
     "babel-runtime": "^6.25.0",
     "chartist": "^0.11.0",
     "connect-history-api-fallback": "^1.5.0",
     "event-emitter": "^0.3.5",
+    "eventlistener": "0.0.1",
     "express": "^4.16.0",
     "graphql": "^0.11.7",
+    "graphql-request": "^1.4.0",
     "graphql-tag": "^2.5.0",
     "pug": "^2.0.0-rc.4",
     "pug-loader": "^2.3.0",
     "quasar-extras": "0.x",
     "quasar-framework": "^0.14.4",
     "vue": "^2.5.0",
-    "vue-apollo": "^3.0.0-alpha.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1",
+    "vuex-nested-mutations": "^1.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
