--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "quasar-framework": "^0.14.4",
     "vue": "^2.5.0",
     "vue-coin-hive": "0.0.8",
+    "vue-plugin-load-script": "^1.1.0",
     "vue-router": "^3.0.1",
     "vuelidate": "^0.6.1"
   },
