--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "clean": "node build/script.clean.js",
     "dev": "node build/script.dev.js",
-    "build": "node build/script.build.js",
+    "build": "node build/script.build.js && cp _redirects dist",
     "deploy": "node build/script.build.js && git add -A && git commit -a -m 'deploy' && git push heroku master",
     "push": "git add -A && git commit -a -m 'autopush' && git push heroku master",
     "start": "node server.js",
