--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-runtime": "^6.25.0",
     "coin-hive": "^1.9.3",
     "event-emitter": "^0.3.5",
