--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.18.0",
     "babel-runtime": "^6.25.0",
     "coin-hive": "^1.9.3",
+    "crypto-js": "^3.1.9-1",
     "event-emitter": "^0.3.5",
     "eventlistener": "0.0.1",
     "express": "^4.16.0",
@@ -76,7 +77,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
-    "url-loader": "^0.5.7",
+    "url-loader": "^1.1.2",
     "vue-loader": "^13.0.5",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.0",
