--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "babel-runtime": "^6.25.0",
     "coin-hive": "^1.9.3",
     "crypto-js": "^3.1.9-1",
-    "eosjs": "^20.0.0-beta2",
+    "eosjs": "^20.0.0-beta3",
     "event-emitter": "^0.3.5",
     "eventlistener": "0.0.1",
     "express": "^4.16.0",
+    "format-number": "^3.0.0",
     "graphql": "^0.11.7",
     "graphql-request": "^1.4.0",
     "graphql-tag": "^2.5.0",
@@ -35,8 +36,8 @@
     "quasar": "^1.0.0-alpha.6",
     "quasar-extras": "0.x",
     "quasar-framework": "^0.14.4",
-    "scatterjs-core": "^2.5.0",
-    "scatterjs-plugin-eosjs2": "^1.2.0",
+    "scatterjs-core": "^2.7.7",
+    "scatterjs-plugin-eosjs2": "^1.5.0",
     "vue": "^2.5.0",
     "vue-coin-hive": "0.0.8",
     "vue-plugin-load-script": "^1.1.0",
