--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vue/cli-plugin-babel": "^3.2.0",
     "axios": "^0.18.0",
     "babel-runtime": "^6.25.0",
+    "chart.js": "^2.7.3",
     "coin-hive": "^1.9.3",
     "crypto-js": "^3.1.9-1",
     "eosjs": "^20.0.0-beta3",
@@ -39,6 +40,7 @@
     "scatterjs-core": "^2.7.7",
     "scatterjs-plugin-eosjs2": "^1.5.0",
     "vue": "^2.5.0",
+    "vue-chartjs": "^3.4.0",
     "vue-coin-hive": "0.0.8",
     "vue-plugin-load-script": "^1.1.0",
     "vue-router": "^3.0.1",
