--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "@vue/cli-plugin-babel": "^3.2.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
+    "@vue/cli-plugin-babel": "^3.5.0",
     "axios": "^0.18.0",
-    "babel-runtime": "^6.25.0",
     "chart.js": "^2.7.3",
     "coin-hive": "^1.9.3",
     "crypto-js": "^3.1.9-1",
+    "eos-transit": "^2.0.0",
+    "eos-transit-ledger-provider": "^2.0.0",
+    "eos-transit-scatter-provider": "^2.0.0",
     "eosjs": "^20.0.0-beta3",
     "event-emitter": "^0.3.5",
     "eventlistener": "0.0.1",
@@ -34,11 +38,11 @@
     "just-detect-adblock": "^1.0.0",
     "pug": "^2.0.0-rc.4",
     "pug-loader": "^2.3.0",
-    "quasar": "^1.0.0-alpha.6",
     "quasar-extras": "0.x",
-    "quasar-framework": "^0.14.4",
+    "quasar-framework": "^0.14.9",
     "scatterjs-core": "^2.7.7",
     "scatterjs-plugin-eosjs2": "^1.5.0",
+    "uglifyjs-webpack-plugin": "^1.1.6",
     "vue": "^2.5.0",
     "vue-chartjs": "^3.4.0",
     "vue-coin-hive": "0.0.8",
@@ -47,15 +51,23 @@
     "vuelidate": "^0.6.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "autoprefixer": "^6.4.0",
-    "babel-core": "^6.0.0",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-runtime": "^6.0.0",
-    "babel-preset-es2015": "^6.0.0",
-    "babel-preset-stage-2": "^6.0.0",
+    "babel-loader": "^8.0.0",
+    "babel-plugin-add-module-exports": "^1.0.0",
     "colors": "^1.1.2",
-    "connect-history-api-fallback": "^1.5.0",
+    "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.28.7",
     "es6-promise": "^4.1.1",
     "eslint": "^4.8.0",
@@ -68,7 +80,7 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.16.2",
+    "express": "^4.16.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
@@ -84,13 +96,12 @@
     "shelljs": "^0.7.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
-    "uglifyjs-webpack-plugin": "^1.1.6",
-    "url-loader": "^1.1.2",
+    "url-loader": "^0.5.7",
     "vue-loader": "^13.0.5",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.0",
-    "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.9.2",
+    "webpack": "^3.10.0",
+    "webpack-bundle-analyzer": "^3.1.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.19.1",
     "webpack-merge": "^4.1.0"
