--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eventlistener": "0.0.1",
     "express": "^4.16.0",
     "format-number": "^3.0.0",
+    "fuse.js": "^3.4.4",
     "graphql": "^0.11.7",
     "graphql-request": "^1.4.0",
     "graphql-tag": "^2.5.0",
