--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "deploy": "node build/script.build.js && cp _redirects dist && npm run push",
     "push": "git add -A && git commit -a -m 'deploy live' && git push origin master",
     "start": "node server.js",
-    "lint": "eslint --ext .js,.vue src"
+    "lint": "eslint --ext .js,.vue src",
+    "test": "yarn run jest --config jest.config.js"
+  },
+  "peerDependencies": {
+    "babel-core": "6.x || ^7.0.0-bridge.0"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
+    "@babel/polyfill": "^7.4.4",
     "@babel/runtime": "^7.0.0",
     "@vue/cli-plugin-babel": "^3.5.0",
     "axios": "^0.18.0",
@@ -28,7 +32,7 @@
     "eosjs": "^20.0.0-beta3",
     "event-emitter": "^0.3.5",
     "eventlistener": "0.0.1",
-    "express": "^4.16.0",
+    "express": "^4.16.1",
     "format-number": "^3.0.0",
     "graphql": "^0.11.7",
     "graphql-request": "^1.4.0",
@@ -38,11 +42,12 @@
     "just-detect-adblock": "^1.0.0",
     "pug": "^2.0.0-rc.4",
     "pug-loader": "^2.3.0",
-    "quasar-extras": "0.x",
+    "quasar-extras": "^2.0.9",
     "quasar-framework": "^0.14.9",
     "scatterjs-core": "^2.7.7",
     "scatterjs-plugin-eosjs2": "^1.5.0",
     "uglifyjs-webpack-plugin": "^1.1.6",
+    "v-evoke-app": "^1.0.1",
     "vue": "^2.5.0",
     "vue-chartjs": "^3.4.0",
     "vue-coin-hive": "0.0.8",
@@ -51,23 +56,34 @@
     "vuelidate": "^0.6.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-proposal-decorators": "^7.0.0",
-    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
-    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
+    "@babel/plugin-proposal-function-sent": "^7.2.0",
     "@babel/plugin-proposal-json-strings": "^7.0.0",
-    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
-    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.2.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-env": "^7.4.5",
+    "@quasar/quasar-app-extension-testing-unit-jest": "^1.0.0-beta.23",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "autoprefixer": "^6.4.0",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.0",
     "babel-plugin-add-module-exports": "^1.0.0",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-vue": "^2.0.2",
     "colors": "^1.1.2",
     "connect-history-api-fallback": "^1.1.0",
+    "core-js": "2",
     "css-loader": "^0.28.7",
     "es6-promise": "^4.1.1",
     "eslint": "^4.8.0",
@@ -86,22 +102,28 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "glob": "^7.1.2",
     "html-webpack-plugin": "^2.30.1",
-    "http-proxy-middleware": "^0.17.0",
+    "http-proxy-middleware": "^0.19.1",
+    "jest": "^24.8.0",
+    "jest-serializer-vue": "^2.0.2",
+    "jest-vue": "^0.8.2",
     "json-loader": "^0.5.7",
     "opn": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "postcss-loader": "^1.0.0",
     "progress-bar-webpack-plugin": "^1.10.0",
     "purify-css": "^1.2.6",
+    "regenerator-runtime": "^0.13.2",
     "shelljs": "^0.7.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
+    "transform-runtime": "^0.0.0",
     "url-loader": "^0.5.7",
+    "vue-jest": "^3.0.4",
     "vue-loader": "^13.0.5",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.0",
     "webpack": "^3.10.0",
-    "webpack-bundle-analyzer": "^3.1.0",
+    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.19.1",
     "webpack-merge": "^4.1.0"
