EOS Account Creation initial

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0",
+    "@ianwalter/vue-component-reset": "^3.0.0",
     "@vue/cli-plugin-babel": "^3.5.0",
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
@@ -35,6 +36,8 @@
     "is-image-url": "^1.1.8",
     "quasar-extras": "0.x",
     "quasar-framework": "^0.14.9",
+    "query-string": "^6.8.2",
+    "randomstring": "^1.1.5",
     "scatterjs-core": "^2.7.7",
     "scatterjs-plugin-eosjs2": "^1.5.0",
     "uglifyjs-webpack-plugin": "^1.1.6",
@@ -45,9 +48,6 @@
     "vuelidate": "^0.6.1"
   },
   "devDependencies": {
-    "pug": "^2.0.0-rc.4",
-    "pug-loader": "^2.3.0",
-    "core-js": "2",
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
@@ -75,7 +75,8 @@
     "babel-preset-vue": "^2.0.2",
     "colors": "^1.1.2",
     "connect-history-api-fallback": "^1.1.0",
-    "css-loader": "^0.28.7",
+    "core-js": "2",
+    "css-loader": "^3.1.0",
     "es6-promise": "^4.1.1",
     "eslint": "^4.8.0",
     "eslint-config-standard": "^10.2.1",
@@ -99,16 +100,18 @@
     "jest-vue": "^0.8.2",
     "json-loader": "^0.5.7",
     "opn": "^5.0.0",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^1.0.0",
     "progress-bar-webpack-plugin": "^1.10.0",
+    "pug": "^2.0.0-rc.4",
+    "pug-loader": "^2.3.0",
     "purify-css": "^1.2.6",
     "regenerator-runtime": "^0.13.2",
     "shelljs": "^0.7.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "transform-runtime": "^0.0.0",
-    "url-loader": "^0.5.7",
+    "url-loader": "^2.1.0",
     "vue-jest": "^3.0.4",
     "vue-loader": "^13.0.5",
     "vue-style-loader": "^3.0.3",
