--- a/package.json
+++ b/package.json
@@ -25,21 +25,24 @@
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
     "crypto-js": "^3.1.9-1",
-    "eos-transit": "^2.0.0",
+    "eos-transit": "^4.0.1",
     "eos-transit-keycat-provider": "^4.0.0",
-    "eos-transit-ledger-provider": "^2.0.0",
-    "eos-transit-scatter-provider": "^2.0.0",
+    "eos-transit-ledger-provider": "^4.0.2",
+    "eos-transit-scatter-provider": "^4.0.1",
     "eosjs": "^20.0.0",
     "event-emitter": "^0.3.5",
     "eventlistener": "0.0.1",
     "format-number": "^3.0.0",
     "is-image-url": "^1.1.8",
+    "keycatjs": "^0.9.1",
     "quasar-extras": "0.x",
     "quasar-framework": "^0.14.9",
     "query-string": "^6.8.2",
     "randomstring": "^1.1.5",
     "scatterjs-core": "^2.7.7",
     "scatterjs-plugin-eosjs2": "^1.5.0",
+    "short-hash": "^1.0.0",
+    "shortid": "^2.2.15",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "vue": "^2.5.0",
     "vue-chartjs": "^3.4.0",
