--- a/.babelrc
+++ b/.babelrc
@@ -17,8 +17,8 @@
     ["@babel/preset-env",{"modules":"commonjs"}],
     ["@vue/app", {
       "polyfills": [
-        "es6.promise",
-        "es6.symbol"
+        // "es6.promise",
+        // "es6.symbol"
       ]
     }]
   ],
