--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "chart.js": "^2.8.0",
     "crypto-js": "^3.1.9-1",
     "eos-transit": "^4.0.1",
+    "eos-transit-anchor-provider": "^4.0.5",
+    "eos-transit-anchorlink-provider": "^4.0.7",
     "eos-transit-keycat-provider": "^4.0.0",
     "eos-transit-ledger-provider": "^4.0.2",
     "eos-transit-scatter-provider": "^4.0.1",
@@ -60,6 +62,7 @@
     "@babel/plugin-proposal-function-sent": "^7.2.0",
     "@babel/plugin-proposal-json-strings": "^7.0.0",
     "@babel/plugin-proposal-numeric-separator": "^7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
     "@babel/plugin-proposal-throw-expressions": "^7.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-import-meta": "^7.0.0",
@@ -73,6 +76,8 @@
     "babel-loader": "^8.0.0",
     "babel-plugin-add-module-exports": "^1.0.0",
     "babel-plugin-module-resolver": "^3.2.0",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
