improve responsive layout

--- a/package.json
+++ b/package.json
@@ -50,20 +50,13 @@
     "vue": "^2.5.0",
     "vue-chartjs": "^3.4.0",
     "vue-plugin-load-script": "^1.1.0",
-    "vue-router": "^3.4.8",
+    "vue-router": "^3.0.1",
     "vuelidate": "^0.6.1"
   },
   "devDependencies": {
-    "@babel/cli": "7.5.0",
-    "@babel/core": "7.5.0",
-    "@babel/node": "7.5.0",
-    "@babel/plugin-proposal-class-properties": "7.5.0",
-    "@babel/plugin-transform-runtime": "7.5.0",
-    "@babel/preset-env": "7.5.2",
-    "babel-loader": "8.0.6",
-    "webpack": "4.35.3",
-    "webpack-cli": "^3.3.5",
-    "webpack-node-externals": "1.7.2",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-proposal-decorators": "^7.0.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
     "@babel/plugin-proposal-function-sent": "^7.2.0",
@@ -73,11 +66,14 @@
     "@babel/plugin-proposal-throw-expressions": "^7.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.4.5",
     "@quasar/quasar-app-extension-testing-unit-jest": "^1.0.0-beta.23",
     "@vue/test-utils": "^1.0.0-beta.29",
     "autoprefixer": "^6.4.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^24.8.0",
+    "babel-loader": "^8.0.0",
     "babel-plugin-add-module-exports": "^1.0.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
@@ -129,6 +125,7 @@
     "vue-loader": "^13.0.5",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.0",
+    "webpack": "^3.10.0",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.19.1",
