--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "babel-core": "6.x || ^7.0.0-bridge.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0",
+    "@babel/runtime": "^7.12.5",
     "@ianwalter/vue-component-reset": "^3.0.0",
     "@vue/cli-plugin-babel": "^3.5.0",
     "axios": "^0.19.0",
@@ -40,7 +40,7 @@
     "keycatjs": "^0.9.1",
     "quasar-extras": "0.x",
     "quasar-framework": "^0.14.9",
-    "query-string": "^6.8.2",
+    "query-string": "^6.13.7",
     "randomstring": "^1.1.5",
     "scatterjs-core": "^2.7.7",
     "scatterjs-plugin-eosjs2": "^1.5.0",
@@ -50,30 +50,30 @@
     "vue": "^2.5.0",
     "vue-chartjs": "^3.4.0",
     "vue-plugin-load-script": "^1.1.0",
-    "vue-router": "^3.0.1",
+    "vue-router": "^3.4.9",
     "vuelidate": "^0.6.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
+    "@babel/cli": "^7.12.8",
+    "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-proposal-decorators": "^7.0.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
     "@babel/plugin-proposal-function-sent": "^7.2.0",
     "@babel/plugin-proposal-json-strings": "^7.0.0",
-    "@babel/plugin-proposal-numeric-separator": "^7.2.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.12.7",
     "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
     "@babel/plugin-proposal-throw-expressions": "^7.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-env": "^7.12.7",
     "@quasar/quasar-app-extension-testing-unit-jest": "^1.0.0-beta.23",
     "@vue/test-utils": "^1.0.0-beta.29",
     "autoprefixer": "^6.4.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^24.8.0",
-    "babel-loader": "^8.0.0",
+    "babel-loader": "^8.2.2",
     "babel-plugin-add-module-exports": "^1.0.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
@@ -84,7 +84,7 @@
     "babel-preset-vue": "^2.0.2",
     "colors": "^1.1.2",
     "connect-history-api-fallback": "^1.1.0",
-    "core-js": "2",
+    "core-js": "^2.6.12",
     "css-loader": "^3.1.0",
     "es6-promise": "^4.1.1",
     "eslint": "^4.8.0",
